♻️ (Dockerfile): remove redundant permission setting and debug commands 🔧 (Dockerfile): simplify and streamline permission setting for scripts

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -51,12 +51,6 @@ RUN tar -C /root-out -Jxpf /tmp/s6-overlay-${ARCH}.tar.xz
 RUN tar -C /root-out -Jxpf /tmp/s6-overlay-symlinks-noarch.tar.xz
 RUN tar -C /root-out -Jxpf /tmp/s6-overlay-symlinks-arch.tar.xz
 
-# Set permissions for s6-overlay scripts
-RUN find /root-out/etc/s6-overlay/ -type f -exec chmod +x {} \;
-
-# Debug: List files and permissions in /root-out/etc/s6-overlay
-RUN ls -lR /root-out/etc/s6-overlay
-
 # Runtime stage
 FROM scratch
 COPY --from=rootfs-layer /root-out/ /
@@ -71,19 +65,9 @@ LABEL maintainer="Dublok"
 COPY assets/mod-scripts/docker-mods.${MODS_VERSION}.sh /docker-mods
 COPY assets/mod-scripts/package-install.${PKG_INST_VERSION}.sh /etc/s6-overlay/s6-rc.d/init-mods-package-install/run
 
-# Ensure correct permissions and ownership
-RUN chown -R root:root /docker-mods /etc/s6-overlay
-RUN find /docker-mods -type f -exec chmod +x {} \; && \
-    find /etc/s6-overlay/ -type f -exec chmod +x {} \;
-
-# Debug: Verify script existence and permissions
-RUN if [ -f /etc/s6-overlay/s6-rc.d/init-envfile/run ]; then echo "init-envfile/run exists"; else echo "init-envfile/run missing"; fi
-RUN ls -l /etc/s6-overlay/s6-rc.d/init-envfile/run
-RUN if [ -f /etc/s6-overlay/s6-rc.d/init-migrations/run ]; then echo "init-migrations/run exists"; else echo "init-migrations/run missing"; fi
-RUN ls -l /etc/s6-overlay/s6-rc.d/init-migrations/run
-
-# Ensure permissions are set
-RUN chmod +x /etc/s6-overlay/s6-rc.d/init-envfile/run /etc/s6-overlay/s6-rc.d/init-migrations/run
+# set permissions
+RUN chmod 744 /docker-mods && \
+    chmod 744 /etc/s6-overlay/s6-rc.d/init-mods-package-install/run
 
 # environment variables
 ENV PS1="$(whoami)@$(hostname):$(pwd)\\$ " \
