--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -75,15 +75,18 @@ jobs:
       - name: Set Build Args
         run: |
           echo "BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> $GITHUB_ENV
-          echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          SHA_SHORT=$(git rev-parse --short HEAD)
           echo "VERSION=${GITHUB_REF_NAME}-${SHA_SHORT}" >> $GITHUB_ENV
-          echo "BUILD_ARGS=TARGETPLATFORM=${{ matrix.platform }}" >> $GITHUB_ENV
+          echo "TARGETPLATFORM=${{ matrix.platform }}" >> $GITHUB_ENV
           if [ "${{ matrix.platform }}" == "amd64" ]; then
-            echo "BUILD_ARGS=${{ env.BUILD_ARGS }} ARCH=x86_64" >> $GITHUB_ENV
+            echo "ARCH=x86_64" >> $GITHUB_ENV
           elif [ "${{ matrix.platform }}" == "arm64" ]; then
-            echo "BUILD_ARGS=${{ env.BUILD_ARGS }} ARCH=aarch64" >> $GITHUB_ENV
+            echo "ARCH=aarch64" >> $GITHUB_ENV
           fi
-          echo "BUILD_ARGS=${{ env.BUILD_ARGS }} BUILD_DATE=${{ env.BUILD_DATE }} VERSION=${{ env.VERSION }}" >> $GITHUB_ENV
+
+      - name: Combine Build Args
+        run: |
+          echo "BUILD_ARGS=TARGETPLATFORM=${{ env.TARGETPLATFORM }} ARCH=${{ env.ARCH }} BUILD_DATE=${{ env.BUILD_DATE }} VERSION=${{ env.VERSION }}" >> $GITHUB_ENV
 
       - name: Print Build Args
         run: |
@@ -98,7 +101,11 @@ jobs:
           push: true
           platforms: ${{ matrix.platform }}
           tags: ${{ env.TEMP_TAGS }}
-          build-args: ${{ env.BUILD_ARGS }}
+          build-args: |
+            TARGETPLATFORM=${{ env.TARGETPLATFORM }}
+            ARCH=${{ env.ARCH }}
+            BUILD_DATE=${{ env.BUILD_DATE }}
+            VERSION=${{ env.VERSION }}
 
   create-and-push-manifest:
     needs: build-and-push
