--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -47,31 +47,23 @@ jobs:
         run: |
             echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
             echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+            echo "SHA_SHORT: ${SHA_SHORT}"
 
       - name: Extract Branch Name
         id: extract-branch-name
         run: |
             echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
             echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
-
-      - name: ENV Variables
-        run: |
-          source $GITHUB_ENV
-          echo "BRANCH_NAME: ${BRANCH_NAME}"
-          echo "SHA_SHORT: ${SHA_SHORT}"
-          echo "GITHUB_REF_NAME: ${GITHUB_REF_NAME}"
+            echo "BRANCH_NAME: ${BRANCH_NAME}"
+            echo "GITHUB_REF_NAME: ${GITHUB_REF_NAME}"
 
       - name: Define Tags
         run: |
           source $GITHUB_ENV
           TEMP_TAGS="${{ env.Repository }}:${{ env.BaseOS }}-${SHA_SHORT}-${{ matrix.platform }}"
-          echo "TEMP_TAGS=${TEMP_TAGS}" >> $GITHUB_ENV
-          
-      - name: Tags
-        run: |
-          source $GITHUB_ENV
           echo "TEMP_TAGS: ${TEMP_TAGS}"
-          
+          echo "TEMP_TAGS=${TEMP_TAGS}" >> $GITHUB_ENV
+                    
       - name: Set Build Args
         run: |
           echo "BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> $GITHUB_ENV
@@ -126,7 +118,7 @@ jobs:
           SHA_SHORT=${{ env.SHA_SHORT }}
           RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.DOCKER_TOKEN }}" "https://hub.docker.com/v2/repositories/${{ env.Repository }}/tags?name=$SHA_SHORT")
           TAGS=$(echo $RESPONSE | jq -r '.results[].name' | tr '\n' ',' | sed 's/,$//')
-          echo "Fetched tags: $TAGS"
+          echo "TAGS: $TAGS"
           echo "TAGS=$TAGS" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
@@ -138,22 +130,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Create and push multi-arch manifest
-        id: create_manifest
+      - name: Generate Push Tags
         run: |
-          TAGS=${{ env.TAGS }}
-          IFS=',' read -r -a TAG_ARRAY <<< "$TAGS"
-          IMAGETOOLS_CMD="docker buildx imagetools create --tag ${{ env.Repository }}:${{ env.BaseOS }}-${{ env.SHA_SHORT }} --tag ${{ env.Repository }}:${{ env.BaseOS }}-${GITHUB_REF_NAME} "
-          
-          IMAGE_LIST="${{ env.Repository }}:${{ env.BaseOS }}-${{ env.SHA_SHORT }},${{ env.Repository }}:${{ env.BaseOS }}-${GITHUB_REF_NAME}"
-          
+          PUSH_TAGS="${{ env.BaseOS }}-${{ env.SHA_SHORT }},"
+          PUSH_TAGS+="${{ env.BaseOS }}-${GITHUB_REF_NAME},"
+
           if [[ "${GITHUB_REF_NAME}" == v* ]]; then
-            # Extract major version (e.g., v1 from v1.0.2, v1.0.2.1, etc.)
             if [[ "${GITHUB_REF_NAME}" =~ ^v([0-9]+) ]]; then
               MAJOR_VERSION="v${BASH_REMATCH[1]}"
-              
-              # Extract additional version components
               VERSION_REGEX='^v([0-9]+)(\.[0-9]+)?(\.[0-9]+)?(\.[0-9]+)?([aA-zZ])?$'
+
               if [[ "${GITHUB_REF_NAME}" =~ $VERSION_REGEX ]]; then
                 MAJOR_MINOR_VERSION="v${BASH_REMATCH[1]}${BASH_REMATCH[2]}"
                 MAJOR_MINOR_PATCH_VERSION="v${BASH_REMATCH[1]}${BASH_REMATCH[2]}${BASH_REMATCH[3]}"
@@ -161,87 +147,234 @@ jobs:
                 
                 if [[ -n "${BASH_REMATCH[5]}" ]]; then
                   SUFFIX="${BASH_REMATCH[5]}"
-                  FULL_VERSION_WITH_SUFFIX="${FULL_VERSION}${SUFFIX}"
                 else
                   SUFFIX=""
-                  FULL_VERSION_WITH_SUFFIX="${FULL_VERSION}"
                 fi
               fi
               
               if [[ "${SUFFIX}" =~ [aA] ]]; then
-                if [[ -n "$FULL_VERSION" ]]; then
-                  IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-alpha "
-                  IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-alpha"
+                if [[ -n "$FULL_VERSION" ]]; then                
+                  PUSH_TAGS+="${{ env.BaseOS }}-${FULL_VERSION}-alpha,"
                 fi
                 if [[ -n "$MAJOR_MINOR_PATCH_VERSION" ]]; then
-                  IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-alpha "
-                  IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-alpha"
+                  PUSH_TAGS+="${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-alpha,"
                 fi
                 if [[ -n "$MAJOR_MINOR_VERSION" ]]; then
-                  IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-alpha "
-                  IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-alpha"
+                  PUSH_TAGS+="${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-alpha,"
                 fi
-                IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-alpha "
-                IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-alpha "
-                IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-alpha"
-                IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-alpha"
+                PUSH_TAGS+="${{ env.BaseOS }}-alpha,"
+                PUSH_TAGS+="${{ env.BaseOS }}-${MAJOR_VERSION}-alpha,"
               elif [[ "${SUFFIX}" =~ [bB] ]]; then
                 if [[ -n "$FULL_VERSION" ]]; then
-                  IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-beta "
-                  IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-beta"
+                  PUSH_TAGS+="${{ env.BaseOS }}-${FULL_VERSION}-beta,"
                 fi
                 if [[ -n "$MAJOR_MINOR_PATCH_VERSION" ]]; then
-                  IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-beta "
-                  IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-beta"
+                  PUSH_TAGS+="${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-beta,"
                 fi
                 if [[ -n "$MAJOR_MINOR_VERSION" ]]; then
-                  IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-beta "
-                  IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-beta"
+                  PUSH_TAGS+="${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-beta,"
                 fi
-                IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-beta "
-                IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-beta "
-                IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-beta"
-                IMAGE_LIST+=",${{ env.Repository }}:beta"
+                PUSH_TAGS+="${{ env.BaseOS }}-${MAJOR_VERSION}-beta,"
+                PUSH_TAGS+="${{ env.BaseOS }}-beta,"
               else
                 if [[ -n "$FULL_VERSION" ]]; then
-                  IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION} "
-                  IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}"
+                  PUSH_TAGS+="${{ env.BaseOS }}-${FULL_VERSION},"
                 fi
                 if [[ -n "$MAJOR_MINOR_PATCH_VERSION" ]]; then
-                  IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION} "
-                  IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}"
+                  PUSH_TAGS+="${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION},"
                 fi
                 if [[ -n "$MAJOR_MINOR_VERSION" ]]; then
-                  IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION} "
-                  IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}"
+                  PUSH_TAGS+="${{ env.BaseOS }}-${MAJOR_MINOR_VERSION},"
                 fi
-                IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION} "
-                IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-latest "
-                IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }} "
-                IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}"
-                IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-latest"
-                IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}"
+                PUSH_TAGS+="${{ env.BaseOS }}-${MAJOR_VERSION},"
+                PUSH_TAGS+="${{ env.BaseOS }}-latest,"
+                PUSH_TAGS+="${{ env.BaseOS }},"
               fi
             fi
           fi
-          
-          for TAG in "${TAG_ARRAY[@]}"; do
-            IMAGETOOLS_CMD+="${{ env.Repository }}:$TAG "
+
+          PUSH_TAGS=$(echo "${PUSH_TAGS}" | sed 's/,$//')
+          echo "PUSH_TAGS: $PUSH_TAGS"
+          echo "PUSH_TAGS=$PUSH_TAGS" >> $GITHUB_ENV
+
+      - name: Create and push multi-arch manifestX
+        id: create_manifestX
+        run: |
+          PUSH_TAGS=${{ env.PUSH_TAGS }}
+          IFS=',' read -r -a PUSH_TAG_ARRAY <<< "$PUSH_TAGS"
+          IMAGETOOLS_CMD="docker buildx imagetools create "
+
+          for PUSH_TAG in "${PUSH_TAG_ARRAY[@]}"; do
+            IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:$PUSH_TAG "
+          done
+
+          echo "IMAGETOOLS_CMD: $IMAGETOOLS_CMD"
+          eval $IMAGETOOLS_CMD
+      
+      - name: SBOMinify Tag Preparation
+        id: sbom_tag_prep
+        run: |
+          PUSH_TAGS=${{ env.PUSH_TAGS }}
+          SBOM_TAGS=""
+
+          IFS=',' read -r -a TAG_ARRAY <<< "$PUSH_TAGS"
+          for PUSH_TAG in "${TAG_ARRAY[@]}"; do
+            SBOM_TAGS+="${{ env.Repository }}:$PUSH_TAG,"
           done
           
-          echo "IMAGE_LIST=$IMAGE_LIST" >> $GITHUB_ENV
-          echo "Running command: $IMAGETOOLS_CMD"
-          eval $IMAGETOOLS_CMD
-        
-        
-  
+          SBOM_TAGS=$(echo "${SBOM_TAGS}" | sed 's/,$//')
+          
+          echo "SBOM_TAGS: $SBOM_TAGS"
+          echo "SBOM_TAGS=$SBOM_TAGS" >> $GITHUB_ENV
+
+            
       - name: Run Docker Package Versions Action
         uses: DockForge/SBOMinify@latest
         with:
-          images: ${{ env.IMAGE_LIST }}
+          images: ${{ env.SBOM_TAGS }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
           output_path: "sboms"
           sbom_file_prefix: ""
           sbom_file_suffix: ""
           sbom_file_name: "[TAG]"
           
+  #     - name: Create and push multi-arch manifest
+  #       id: create_manifest
+  #       run: |
+  #         TAGS=${{ env.TAGS }}
+  #         IFS=',' read -r -a TAG_ARRAY <<< "$TAGS"
+  #         IMAGETOOLS_CMD="docker buildx imagetools create --tag ${{ env.Repository }}:${{ env.BaseOS }}-${{ env.SHA_SHORT }} --tag ${{ env.Repository }}:${{ env.BaseOS }}-${GITHUB_REF_NAME} "
+          
+  #         IMAGE_LIST="${{ env.Repository }}:${{ env.BaseOS }}-${{ env.SHA_SHORT }},${{ env.Repository }}:${{ env.BaseOS }}-${GITHUB_REF_NAME}"
+          
+  #         if [[ "${GITHUB_REF_NAME}" == v* ]]; then
+  #           if [[ "${GITHUB_REF_NAME}" =~ ^v([0-9]+) ]]; then
+  #             MAJOR_VERSION="v${BASH_REMATCH[1]}"
+              
+  #             # Extract additional version components
+  #             VERSION_REGEX='^v([0-9]+)(\.[0-9]+)?(\.[0-9]+)?(\.[0-9]+)?([aA-zZ])?$'
+  #             if [[ "${GITHUB_REF_NAME}" =~ $VERSION_REGEX ]]; then
+  #               MAJOR_MINOR_VERSION="v${BASH_REMATCH[1]}${BASH_REMATCH[2]}"
+  #               MAJOR_MINOR_PATCH_VERSION="v${BASH_REMATCH[1]}${BASH_REMATCH[2]}${BASH_REMATCH[3]}"
+  #               FULL_VERSION="v${BASH_REMATCH[1]}${BASH_REMATCH[2]}${BASH_REMATCH[3]}${BASH_REMATCH[4]}"
+                
+  #               if [[ -n "${BASH_REMATCH[5]}" ]]; then
+  #                 SUFFIX="${BASH_REMATCH[5]}"
+  #                 FULL_VERSION_WITH_SUFFIX="${FULL_VERSION}${SUFFIX}"
+  #               else
+  #                 SUFFIX=""
+  #                 FULL_VERSION_WITH_SUFFIX="${FULL_VERSION}"
+  #               fi
+  #             fi
+              
+  #             if [[ "${SUFFIX}" =~ [aA] ]]; then
+  #               if [[ -n "$FULL_VERSION" ]]; then
+  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-alpha "
+  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-alpha"
+  #               fi
+  #               if [[ -n "$MAJOR_MINOR_PATCH_VERSION" ]]; then
+  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-alpha "
+  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-alpha"
+  #               fi
+  #               if [[ -n "$MAJOR_MINOR_VERSION" ]]; then
+  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-alpha "
+  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-alpha"
+  #               fi
+  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-alpha "
+  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-alpha "
+  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-alpha"
+  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-alpha"
+  #             elif [[ "${SUFFIX}" =~ [bB] ]]; then
+  #               if [[ -n "$FULL_VERSION" ]]; then
+  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-beta "
+  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}-beta"
+  #               fi
+  #               if [[ -n "$MAJOR_MINOR_PATCH_VERSION" ]]; then
+  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-beta "
+  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}-beta"
+  #               fi
+  #               if [[ -n "$MAJOR_MINOR_VERSION" ]]; then
+  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-beta "
+  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}-beta"
+  #               fi
+  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-beta "
+  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-beta "
+  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}-beta"
+  #               IMAGE_LIST+=",${{ env.Repository }}:beta"
+  #             else
+  #               if [[ -n "$FULL_VERSION" ]]; then
+  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION} "
+  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${FULL_VERSION}"
+  #               fi
+  #               if [[ -n "$MAJOR_MINOR_PATCH_VERSION" ]]; then
+  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION} "
+  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_PATCH_VERSION}"
+  #               fi
+  #               if [[ -n "$MAJOR_MINOR_VERSION" ]]; then
+  #                 IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION} "
+  #                 IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_MINOR_VERSION}"
+  #               fi
+  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION} "
+  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }}-latest "
+  #               IMAGETOOLS_CMD+="--tag ${{ env.Repository }}:${{ env.BaseOS }} "
+  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-${MAJOR_VERSION}"
+  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}-latest"
+  #               IMAGE_LIST+=",${{ env.Repository }}:${{ env.BaseOS }}"
+  #             fi
+  #           fi
+  #         fi
+          
+  #         for TAG in "${TAG_ARRAY[@]}"; do
+  #           IMAGETOOLS_CMD+="${{ env.Repository }}:$TAG "
+  #         done
+          
+  #         echo "IMAGE_LIST=$IMAGE_LIST" >> $GITHUB_ENV
+  #         echo "Running command: $IMAGETOOLS_CMD"
+  #         eval $IMAGETOOLS_CMD
+                
+  # push-github-packages:
+  #   needs: create-and-push-manifest
+  #   runs-on: ubuntu-latest
+  #   env:
+  #       SHA_SHORT: ${{ needs.build-and-push.outputs.SHA_SHORT }}
+  #       BRANCH_NAME: ${{ needs.build-and-push.outputs.BRANCH_NAME }}
+  #   steps:
+  #     - name: Print ENV Variables
+  #       run: |
+  #         echo "SHA_SHORT: ${{ env.SHA_SHORT }}"
+  #         echo "BRANCH_NAME: ${{ env.BRANCH_NAME }}"
+  #         echo "GITHUB_REF_NAME: ${GITHUB_REF_NAME}"
+  
+  #     - name: Log in to GitHub Packages
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
+          
+
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1
+  #       with:
+  #         install: true
+
+  #     - name: Log in to Docker Hub
+  #       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    
+  #     - name: Pull Docker image for amd64 and arm64
+  #       run: |        
+  #         TAGS=${{ env.TAGS }}
+  #         IFS=',' read -r -a TAG_ARRAY <<< "$TAGS"
+  #         for TAG in "${TAG_ARRAY[@]}"; do
+  #           docker pull ${{ env.Repository }}:$TAG
+  #         done
+
+  #     - name: Create multi-arch image
+  #       run: |
+  #         docker tag dublok/base-linux:alpine ghcr.io/dockforge/base-linux/base-linux:alpine-amd64
+  #         docker tag dublok/base-linux:alpine ghcr.io/dockforge/base-linux/base-linux:alpine-arm64
+  #         docker buildx create --use
+  #         docker buildx imagetools create \
+  #           ghcr.io/dockforge/base-linux/base-linux:alpine-amd64 \
+  #           ghcr.io/dockforge/base-linux/base-linux:alpine-arm64 \
+  #           --tag ghcr.io/dockforge/base-linux/base-linux:alpine
