--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -69,22 +69,29 @@ jobs:
           TEMP_TAGS="${{ env.Repository }}:${{ env.BaseOS }}-${SHA_SHORT}-${{ matrix.platform }}"
           echo "TEMP_TAGS: ${TEMP_TAGS}"
           echo "TEMP_TAGS=${TEMP_TAGS}" >> $GITHUB_ENV
+          echo "TEMP_TAGS=${TEMP_TAGS}" >> $GITHUB_OUTPUT
                     
       - name: Set Build Args
         run: |
           echo "BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> $GITHUB_ENV
+          echo "BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> $GITHUB_OUTPUT
           SHA_SHORT=$(git rev-parse --short HEAD)
           echo "VERSION=${GITHUB_REF_NAME}/${SHA_SHORT}" >> $GITHUB_ENV
+          echo "VERSION=${GITHUB_REF_NAME}/${SHA_SHORT}" >> $GITHUB_OUTPUT
           echo "TARGETPLATFORM=${{ matrix.platform }}" >> $GITHUB_ENV
+          echo "TARGETPLATFORM=${{ matrix.platform }}" >> $GITHUB_OUTPUT
           if [ "${{ matrix.platform }}" == "amd64" ]; then
             echo "ARCH=x86_64" >> $GITHUB_ENV
+            echo "ARCH=x86_64" >> $GITHUB_OUTPUT
           elif [ "${{ matrix.platform }}" == "arm64" ]; then
             echo "ARCH=aarch64" >> $GITHUB_ENV
+            echo "ARCH=aarch64" >> $GITHUB_OUTPUT
           fi
 
       - name: Combine Build Args
         run: |
           echo "BUILD_ARGS=TARGETPLATFORM=${{ env.TARGETPLATFORM }} ARCH=${{ env.ARCH }} BUILD_DATE=${{ env.BUILD_DATE }} VERSION=${{ env.VERSION }}" >> $GITHUB_ENV
+          echo "BUILD_ARGS=TARGETPLATFORM=${{ env.TARGETPLATFORM }} ARCH=${{ env.ARCH }} BUILD_DATE=${{ env.BUILD_DATE }} VERSION=${{ env.VERSION }}" >> $GITHUB_OUTPUT
 
       - name: Print Build Args
         run: |
@@ -129,6 +136,7 @@ jobs:
           TAGS=$(echo $RESPONSE | jq -r '.results[].name' | tr '\n' ',' | sed 's/,$//')
           echo "TAGS: $TAGS"
           echo "TAGS=$TAGS" >> $GITHUB_ENV
+          echo "TAGS=$TAGS" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -206,6 +214,7 @@ jobs:
           PUSH_TAGS=$(echo "${PUSH_TAGS}" | sed 's/,$//')
           echo "PUSH_TAGS: $PUSH_TAGS"
           echo "PUSH_TAGS=$PUSH_TAGS" >> $GITHUB_ENV
+          echo "PUSH_TAGS=$PUSH_TAGS" >> $GITHUB_OUTPUT
 
       - name: Create and push multi-arch manifest
         id: create_manifest
@@ -243,6 +252,7 @@ jobs:
           
           echo "SBOM_TAGS: $SBOM_TAGS"
           echo "SBOM_TAGS=$SBOM_TAGS" >> $GITHUB_ENV
+          echo "SBOM_TAGS=$SBOM_TAGS" >> $GITHUB_OUTPUT
             
       - name: Run Docker Package Versions Action
         uses: DockForge/SBOMinify@latest
