🔧 (load-workflow.yml): update action path to use linux-base-action

--- a/.github/workflows/load-workflow.yml
+++ b/.github/workflows/load-workflow.yml
@@ -21,4 +21,4 @@ jobs:
           PRIVATE_REPO_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Use Composite Action
-        uses: ./private-configs/.github/actions/${{ github.event.repository.name }}-action
+        uses: ./private-configs/.github/actions/linux-base-action
