🔧 (load-workflow.yml): add additional debug command to list specific action directory

--- a/.github/workflows/load-workflow.yml
+++ b/.github/workflows/load-workflow.yml
@@ -21,7 +21,9 @@ jobs:
           PRIVATE_REPO_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Debug
-        run: ls -la private-configs/.github/actions
+        run: |
+          ls -la private-configs/.github/actions
+          ls -la private-configs/.github/actions/${{ github.event.repository.name }}-action
 
       - name: Set Action Path
         id: set-action-path
