🔧 (load-workflow.yml): add HOUSE secret to environment variables in workflow

--- a/.github/workflows/load-workflow.yml
+++ b/.github/workflows/load-workflow.yml
@@ -18,3 +18,5 @@ jobs:
 
       - name: Use Composite Action
         uses: ./workflows/.github/actions/action
+        env:
+          HOUSE: ${{ secrets.HOUSE }}
