🔧 (load-workflow.yml): switch from env to with for passing SECRETS_JSON to composite action

--- a/.github/workflows/load-workflow.yml
+++ b/.github/workflows/load-workflow.yml
@@ -17,8 +17,5 @@ jobs:
 
       - name: Use Composite Action
         uses: ./workflows/.github/actions/action
-        env:
+        with:
           SECRETS_JSON: ${{ toJson(secrets) }}
-        # env:
-        #   HOUSE: ${{ secrets.HOUSE }}
-        #   TOKEN: ${{ secrets.TOKEN }}
