🔧 (load-workflow.yml): switch from 'with' to 'env' for passing secrets to composite action

--- a/.github/workflows/load-workflow.yml
+++ b/.github/workflows/load-workflow.yml
@@ -17,6 +17,7 @@ jobs:
 
       - name: Use Composite Action
         uses: ./workflows/.github/actions/action
-        with:
-          SECRETS_JSON: ${{ toJson(secrets) }}
- 
+        env:
+          TOKEN: ${{ secrets.TOKEN }}
+          HOUSE: ${{ secrets.HOUSE }}
+           
